apps/litellm/05-litellm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
  namespace: litellm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm-database:1.86.0
          imagePullPolicy: IfNotPresent
          args:
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "4000"
            - "--config"
            - "/app/config.yaml"
            - "--num_workers"
            - "1"
          ports:
            - name: http
              containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 12
          
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 180 # prisma migration might take too long
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 120
          
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1500Mi
          volumeMounts:
            - name: litellm-config
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: litellm-config
          configMap:
            name: litellm-config
---
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: litellm
spec:
  type: ClusterIP
  selector:
    app: litellm
  ports:
    - name: http
      port: 4000
      targetPort: http

---
apiVersion: v1
kind: Service 
metadata:
  name: litellm-lb
  namespace: litellm
  annotations:
    metallb.io/loadBalancerIPs: 192.168.63.219
spec:
  type: LoadBalancer
  selector:
    app: litellm
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-tailscale
  namespace: litellm
  #annotations:
  #  tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: litellm
      port:
        number: 4000
  tls:
    - hosts:
        - litellm
